--- a/Calculadora/app/src/main/res/layout/activity_main.xml
+++ b/Calculadora/app/src/main/res/layout/activity_main.xml
@@ -8,172 +8,190 @@
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
     tools:context=".MainActivity"
-    android:layout_alignParentLeft="true">
+    android:layout_alignParentLeft="true"
+    android:background="#2E2E2E">
+
 
     <TextView
         android:id="@+id/texto_numeros"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/gridlayout"
-        android:height="100dp"
-        android:layout_marginBottom="14dp"
         android:layout_alignParentRight="true"
-        android:textAlignment="textEnd"
         android:layout_centerHorizontal="true"
-        android:gravity="end" />
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="50dp"
+        android:height="100dp"
+        android:gravity="end"
+        android:textAlignment="textEnd" />
 
     <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/gridlayout"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
         android:columnCount="4"
-        android:rowCount="4"
+        android:rowCount="5"
         tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/numero_7"
-            style="@style/AppTheme.BotonCalculadora.Azul"
+        <Button
+            android:id="@+id/tecla_c"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
-            android:text="7" />
+            android:text="C" />
 
-        <TextView
-            android:id="@+id/numero_8"
-            style="@style/AppTheme.BotonCalculadora.Azul"
+        <Button
+            android:id="@+id/tecla_dividir"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
-            android:text="8" />
+            android:text="/" />
 
-        <TextView
-            android:id="@+id/numero_9"
-            style="@style/AppTheme.BotonCalculadora.Azul"
+        <Button
+            android:id="@+id/tecla_multi"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="2"
-            android:text="9" />
+            android:text="X" />
 
-        <TextView
-            android:id="@+id/signo_dividir"
-            style="@style/AppTheme.BotonCalculadora.Rojo"
+        <Button
+            android:id="@+id/tecla_borrar"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
             android:layout_width="103dp"
             android:layout_row="0"
             android:layout_column="3"
             android:layout_gravity="fill_horizontal"
-            android:text="÷" />
+            android:text="BORRAR" />
 
-        <TextView
-            android:id="@+id/numero_4"
+        <Button
+            android:id="@+id/numero_7"
             style="@style/AppTheme.BotonCalculadora.Azul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="0"
-            android:text="4" />
+            android:text="7" />
 
-        <TextView
-            android:id="@+id/numero_5"
+        <Button
+            android:id="@+id/numero_8"
             style="@style/AppTheme.BotonCalculadora.Azul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="1"
-            android:text="5" />
+            android:text="8" />
 
-        <TextView
-            android:id="@+id/numero_6"
+        <Button
+            android:id="@+id/numero_9"
             style="@style/AppTheme.BotonCalculadora.Azul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="2"
-            android:text="6" />
+            android:text="9" />
 
-        <TextView
-            android:id="@+id/signo_multiplicar"
-            style="@style/AppTheme.BotonCalculadora.Rojo"
+        <Button
+            android:id="@+id/tecla_menos"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
             android:layout_row="1"
-            android:layout_column="3"
-            android:layout_gravity="fill_horizontal"
-            android:text="x" />
-
-        <TextView
-            android:id="@+id/numero_1"
-            style="@style/AppTheme.BotonCalculadora.Azul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:text="1" />
-
-        <TextView
-            android:id="@+id/numero_2"
-            style="@style/AppTheme.BotonCalculadora.Azul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:text="2" />
-
-        <TextView
-            android:id="@+id/numero_3"
-            style="@style/AppTheme.BotonCalculadora.Azul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:text="3" />
-
-        <TextView
-            android:id="@+id/signo_menos"
-            style="@style/AppTheme.BotonCalculadora.Rojo"
-            android:layout_row="2"
             android:layout_column="3"
             android:layout_gravity="fill_horizontal"
             android:text="-" />
 
-        <TextView
-            android:id="@+id/signo_punto"
+        <Button
+            android:id="@+id/numero_4"
+            style="@style/AppTheme.BotonCalculadora.Azul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:text="4" />
+
+        <Button
+            android:id="@+id/numero_5"
+            style="@style/AppTheme.BotonCalculadora.Azul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:text="5" />
+
+        <Button
+            android:id="@+id/numero_6"
+            style="@style/AppTheme.BotonCalculadora.Azul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:text="6" />
+
+        <Button
+            android:id="@+id/tecla_mas"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:layout_gravity="fill_horizontal"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/numero_1"
             style="@style/AppTheme.BotonCalculadora.Azul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="0"
-            android:layout_gravity="fill_horizontal"
-            android:text="." />
+            android:text="1" />
 
-        <TextView
-            android:id="@+id/numero_0"
+        <Button
+            android:id="@+id/numero_2"
             style="@style/AppTheme.BotonCalculadora.Azul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="1"
-            android:text="0" />
+            android:text="2" />
 
-        <TextView
-            android:id="@+id/signo_igual"
+        <Button
+            android:id="@+id/numero_3"
             style="@style/AppTheme.BotonCalculadora.Azul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="2"
-            android:layout_gravity="fill_horizontal"
+            android:text="3" />
+
+        <Button
+            android:id="@+id/signo_igual"
+            style="@style/AppTheme.BotonCalculadora.Naranja"
+            android:layout_row="3"
+            android:layout_rowSpan="2"
+            android:layout_column="3"
+            android:layout_gravity="fill_horizontal|fill_vertical"
             android:text="=" />
 
-        <TextView
-            android:id="@+id/signo_mas"
-            style="@style/AppTheme.BotonCalculadora.Rojo"
-            android:layout_row="3"
-            android:layout_column="3"
+        <Button
+            android:id="@+id/numero_0"
+            style="@style/AppTheme.BotonCalculadora.Azul"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
             android:layout_gravity="fill_horizontal"
-            android:text="+" />
+            android:text="0" />
+
+        <Button
+            android:id="@+id/signo_punto"
+            style="@style/AppTheme.BotonCalculadora.Azul"
+            android:layout_row="4"
+            android:layout_column="2"
+            android:text="." />
     </GridLayout>
 </RelativeLayout>
