--- a/Calculadora/app/src/main/res/layout/activity_main.xml
+++ b/Calculadora/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,10 @@
         android:layout_above="@+id/gridlayout"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
+        android:textColor="@android:color/white"
+        android:textSize="50dp"
+        android:inputType="number"
+        android:maxLength="14"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="50dp"
         android:height="100dp"
@@ -30,8 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:columnCount="4"
         android:rowCount="5"
         tools:context=".MainActivity">
