--- a/ShoppingList2/app/src/main/res/layout/activity_add_shopping_list.xml
+++ b/ShoppingList2/app/src/main/res/layout/activity_add_shopping_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/normal_padding"
     tools:context=".addshoppinglist.AddShoppingListActivity">
 
     <Button
@@ -20,6 +21,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/name_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/shopping_list_hint"
